# Fishy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  main.cpp
assets/models/: ANKER.fbx  testCube.fbx
src/: Fishy.cpp  Fishy.h  Fishy.qrc  Fishy.ui  FishyRenderer.cpp  FishyRenderer.h
src/Accelerator/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BVHAccel.cpp  BVHAccel.h
src/cameras/: PerspectiveCamera.h
src/core/: BSDF.cpp  BSDF.h  Camera.h  Film.cpp  Film.h  Fishy.h  FishyShape.h  Frame.h  Geometry.h  Integrator.cpp  Integrator.h  Interaction.cpp  Interaction.h  Primitive.h  Ray.h  Sampler.h  Scene.cpp  Scene.h  Shape.h  Transform.cpp  Transform.h  common.h
src/fishy/: SceneManager.cpp  SceneManager.h
src/lights/: Light.h
src/materials/: Material.h
src/samplers/: RandomSampler.cpp  RandomSampler.h  TrapezoidalSampler.h
src/shapes/: Cube.cpp  Cube.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/utilities/: FishyThreadPool.cpp  FishyThreadPool.h  FishyTimer.h
